--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "core-js": "^2.6.9",
     "lib-flexible": "^0.3.2",
     "mint-ui": "^1.0.2",
+    "mockjs": "^1.0.1-beta3",
     "px2rem-loader": "^0.1.9",
     "swiper": "^4.5.1",
+    "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
@@ -24,6 +26,7 @@
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.7",
